[package]
name = "dinasty"
version = "0.1.0"
edition = "2021"

[dependencies]
age = { version = "0.9.2", features = ["armor"] }
bech32 = "0.9.1"
bip39 = "2.0.0"
bitcoin = { version = "0.30.0", features = ["base64"] }
bitcoind = "0.32.0"
clap = { version = "4.3.5", features = ["derive", "env"] }
clap_complete = "4.4.1"
codex32 = "0.1.0"
env_logger = "0.10.0"
home = "0.5.5"
log = "0.4.19"
miniscript = "10.0.0"
qr_code = "2.0.0"
thiserror = "1.0.40"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.8"


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3
